[package]
name = "single-threaded-orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
